--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -46,6 +46,8 @@ jobs:
         app-name: Hello-World
     # Path to package or folder. *.zip or a folder to deploy
         package: /home/runner/work/Trimble-java
+        publish-profile: ${{ secrets.PUBLISH_PROFILE}}
+
 
 
         
