--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -43,9 +43,6 @@ jobs:
     - name: Change artifact permission
       run: chmod +x /home/runner/work/Trimble-java
        
-    - name: publish
-      run:  gradle publish /home/runner/work/Trimble-java
-       
       
     - name: Deploy to Azure Functions
       uses: Azure/functions-action@v1.4.4
@@ -53,7 +50,7 @@ jobs:
     # Name of the Azure Function App
         app-name: Hello-World
     # Path to package or folder. *.zip or a folder to deploy
-        package: Hello-World
+        package: '${{ github.workspace }}/target/*.jar'
         publish-profile: ${{ secrets.PUBLISH_PROFILE}}
 
 
