--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -47,7 +47,7 @@ jobs:
     # Name of the Azure Function App
         app-name: Hello-World
     # Path to package or folder. *.zip or a folder to deploy
-        package: ${{ github.workspace }}/target/*.jar
+        package: ${{ github.workspace }}/target/*.tar
         publish-profile: ${{ secrets.PUBLISH_PROFILE}}
 
 
