--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -25,14 +25,20 @@ jobs:
       with:
         java-version: '11'
         distribution: 'temurin'
+        cache: 'gradle'
         
     - name: Change wrapper permission
       run: chmod +x ./gradlew
 
-    - name: Build with Gradle
-      uses: gradle/gradle-build-action@937999e9cc2425eddc7fd62d1053baf041147db7
-      with:
-        arguments: build
+    #- name: Build with Gradle
+     # uses: gradle/gradle-build-action@937999e9cc2425eddc7fd62d1053baf041147db7
+    #  with:
+     #   arguments: build
+        
+        
+
+    - name: Build with Maven
+      run: gradle clean install
         
     - uses: actions/upload-artifact@v2
     
