--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -35,7 +35,8 @@ jobs:
       with:
         arguments: build
         
-    - uses: actions/upload-artifact@v2
+    - name: upload the artifacts   
+      uses: actions/upload-artifact@v2
       with:
         name: Hello-Java
         path: '${{ github.workspace }}/target/
