--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -38,7 +38,7 @@ jobs:
     - name: upload the artifacts   
       uses: actions/upload-artifact@v2
       with:
-        name: Package
+        name: package
         path: '${{ github.workspace }}/target/
 
     - name: Deploy to Azure Functions
