--- a/.github/workflows/gradle.yml
+++ b/.github/workflows/gradle.yml
@@ -44,7 +44,8 @@ jobs:
     # Path to package or folder. *.zip or a folder to deploy
         
         publish-profile: ${{ secrets.PUBLISH_PROFILE}}
-        package: '${{ github.workspace }}/target/'
+        package: /home/runner/work/test-java
+
 
 
 
